syntax = "proto3";
package POGOLib.Pokemon.Proto.Map.Fort;

import public "Enums/Pokemon.proto";

message FortLureInfo {
  string fort_id = 1;
  double unknown2 = 2;
  POGOLib.Pokemon.Proto.Enums.Pokemon active_pokemon = 3;
  int64 lure_expires_timestamp_ms = 4;
}
